# sqlx_mysql_compare

./: Cargo.toml  LICENSE  README.md
src/: main.rs
